package Calc;

public interface Operation {
    float execute(float operand1, float operand2);
}
